--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                             <div class="col-md-5 ps-0 d-none d-md-block">
                                 <!-- Contenedor para el área que tiene un fondo azul y texto blanco -->
                                 <div class="form-right h-100 bg-primary text-white text-center pt-5">
-                                    <img src="/IMAGENES/eps-result.PNG" alt="eps" class="img-fluid rounded-circle mb-3" style="width: 150px; height: 150px;" />
+                                    <img src="./IMAGENES/eps-result.PNG" alt="eps" class="img-fluid rounded-circle mb-3" style="width: 150px; height: 150px;" />
                                     <h2 class="h4">Resultado:</h2>     
                                     <!--Resultado de los datos insertados-->
                                     <div id="respuesta" class="resultado">
@@ -122,7 +122,7 @@
         </div>
     </div>
 
-    <script src="/javascript/formulario.js"></script> 
+    <script src="./javascript/formulario.js"></script> 
 
 </body>
 </html>
