--- a/index.html
+++ b/index.html
@@ -127,9 +127,10 @@
             <thead>
               <tr>
                 <th scope="col">#</th>
-                <th scope="col">First</th>
-                <th scope="col">Last</th>
-                <th scope="col">Handle</th>
+                <th scope="col">Nombre</th>
+                <th scope="col">Apellido</th>
+                <th scope="col">Edad</th>
+                <th scope="col">Correo electronico</th>
               </tr>
             </thead>
             <tbody>
@@ -137,17 +138,21 @@
                 <th scope="row">1</th>
                 <td>Mark</td>
                 <td>Otto</td>
+                <td>24</td>
                 <td>@mdo</td>
               </tr>
               <tr>
                 <th scope="row">2</th>
                 <td>Jacob</td>
                 <td>Thornton</td>
+                <td>32</td>
                 <td>@fat</td>
               </tr>
               <tr>
                 <th scope="row">3</th>
-                <td colspan="2">Larry the Bird</td>
+                <td >Larry</td>
+                <td>Oldman</td>
+                <td>31</td>
                 <td>@twitter</td>
               </tr>
             </tbody>
