Funciones para el CRUD

--- a/index.html
+++ b/index.html
@@ -96,8 +96,9 @@
     
                                             <!-- BOTONES PARA LAS FUNCIONES -->
                                             <div class="col-12">
-                                                <button type="button" onclick="obtenerUsuarios()" class="btn btn-primary">obtenerUsuarios</button>  
+                                                <button type="button" onclick="obtenerUsuarios()" class="btn btn-primary">obtener Usuarios</button>  
                                                 <button type="button" onclick="limpiarDatos()" class="btn btn-danger">Limpiar</button>  
+                                                <button type="button" onclick="crearUsuario()" class="btn btn-danger">Crear Usuario</button>  
                                             </div>
                                     </form>
                                 </div>
@@ -109,9 +110,6 @@
                                 <!-- Contenedor para el área que tiene un fondo azul y texto blanco -->
                                 <div class="form-right h-100 bg-primary text-white text-center pt-5">
                                     <img src="./IMAGENES/eps-result.PNG" alt="eps" class="img-fluid rounded-circle mb-3" style="width: 150px; height: 150px;" />
-                                    <h2 class="h4">Resultado:</h2>     
-                                    <!--Resultado de los datos insertados-->
-                                    <div id="respuesta" class="resultado">
                                     </div>
                                 </div>
                             </div>                            
@@ -121,35 +119,23 @@
             </div>
         </div>
     </div>
+
+    <!--TABLA BD-->
     <section>
         <h4>Registro de usuario</h4>
         <table class="table">
             <thead>
               <tr>
-                <th scope="col">#</th>
-                <th scope="col">First</th>
-                <th scope="col">Last</th>
-                <th scope="col">Handle</th>
+                <th scope="col">Nombre</th>
+                <th scope="col">Apellido</th>
+                <th scope="col">EPS</th>
+                <th scope="col">Genero</th>
+                <th scope="col">Terminos</th>
+                <th scope="col"></th>
               </tr>
             </thead>
-            <tbody>
-              <tr>
-                <th scope="row">1</th>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
-              </tr>
-              <tr>
-                <th scope="row">2</th>
-                <td>Jacob</td>
-                <td>Thornton</td>
-                <td>@fat</td>
-              </tr>
-              <tr>
-                <th scope="row">3</th>
-                <td colspan="2">Larry the Bird</td>
-                <td>@twitter</td>
-              </tr>
+            <tbody id="usuariosTabla">
+                <!-- Usuarios registrados -->
             </tbody>
           </table>
     </section>
