--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
     
                                             <!-- BOTONES PARA LAS FUNCIONES -->
                                             <div class="col-12">
-                                                <button type="button" onclick="obtenerUsuarios()" class="btn btn-primary">obtener Usuarios</button>  
+                                                <button type="button" onclick="crearUsuario()" class="btn btn-primary">Crear usuario</button>  
+                                                <button type="button" onclick="confirmarEdicion()" id="confirmarEdicionBtn" class="btn btn-danger1">Actualizar</button>  
                                                 <button type="button" onclick="limpiarDatos()" class="btn btn-danger">Limpiar</button>  
-                                                <button type="button" onclick="crearUsuario()" class="btn btn-danger">Crear Usuario</button>  
                                             </div>
                                     </form>
                                 </div>
@@ -110,7 +110,8 @@
                                 <!-- Contenedor para el área que tiene un fondo azul y texto blanco -->
                                 <div class="form-right h-100 bg-primary text-white text-center pt-5">
                                     <img src="./IMAGENES/eps-result.PNG" alt="eps" class="img-fluid rounded-circle mb-3" style="width: 150px; height: 150px;" />
-                                    </div>
+                                    <center><h2>BIENVENIDO</h2></center>   
+                                </div>
                                 </div>
                             </div>                            
                         </div>
@@ -129,6 +130,7 @@
                 <th scope="col">Nombre</th>
                 <th scope="col">Apellido</th>
                 <th scope="col">EPS</th>
+                <th scope="col">Edad</th>
                 <th scope="col">Genero</th>
                 <th scope="col">Terminos</th>
                 <th scope="col"></th>
