--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css" rel="stylesheet">
-
 </head>
 <body>
 
@@ -97,7 +96,7 @@
                                             <!-- BOTONES PARA LAS FUNCIONES -->
                                             <div class="col-12">
                                                 <button type="button" onclick="crearUsuario()" class="btn btn-primary">Crear usuario</button>  
-                                                <button type="button" onclick="confirmarEdicion()" id="confirmarEdicionBtn" class="btn btn-danger1">Actualizar</button>  
+                                                <button type="button" onclick="confirmarEdicion()" class="btn btn-danger1">Actualizar</button>  
                                                 <button type="button" onclick="limpiarDatos()" class="btn btn-danger">Limpiar</button>  
                                             </div>
                                     </form>
@@ -124,22 +123,24 @@
     <!--TABLA BD-->
     <section>
         <h4>Registro de usuario</h4>
-        <table class="table">
-            <thead>
-              <tr>
-                <th scope="col">Nombre</th>
-                <th scope="col">Apellido</th>
-                <th scope="col">EPS</th>
-                <th scope="col">Edad</th>
-                <th scope="col">Genero</th>
-                <th scope="col">Terminos</th>
-                <th scope="col"></th>
-              </tr>
-            </thead>
-            <tbody id="usuariosTabla">
-                <!-- Usuarios registrados -->
-            </tbody>
-          </table>
+        <div class="table-responsive">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col">Nombre</th>
+                        <th scope="col">Apellido</th>
+                        <th scope="col">EPS</th>
+                        <th scope="col">Edad</th>
+                        <th scope="col">Genero</th>
+                        <th scope="col">Terminos</th>
+                        <th scope="col"></th>
+                    </tr>
+                </thead>
+                <tbody id="usuariosTabla">
+                    <!-- Usuarios registrados -->
+                </tbody>
+            </table>
+        </div>
     </section>
     <script src="./javascript/formulario.js"></script> 
 
