Se arreglaron los botones feos

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                             </div>
     
                                             <!-- BOTONES PARA LAS FUNCIONES -->
-                                            <div class="col-12">
+                                            <div class="d-grid gap-2">
                                                 <button type="button" onclick="crearUsuario()" class="btn btn-primary">Crear usuario</button>  
                                                 <button type="button" onclick="confirmarEdicion()" class="btn btn-danger1">Actualizar</button>  
                                                 <button type="button" onclick="limpiarDatos()" class="btn btn-danger">Limpiar</button>  
